Squash 7 commits into 1 commit

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   </div>
 
   <div id="credits">
-    Created by
-    <br />
-    <a href="">Yamamoto Akihiro</a>.
+    Created by Yamamoto Akihiro.
+    <br />This App's <a href="https://github.com/varmil/WebSta#readme" target="_blank">Git hub</a>.
+	
     <br />Based on: <a href="http://documentcloud.github.io/backbone/examples/todos/index.html" target="_blank">Todos</a>.
   </div>
   
